# Appocalypse

./: Cargo.toml  README.md
.cargo/: config.toml
src/core/: save.rs  sync.rs  theme.rs  uad_lists.rs  update.rs
src/gui/: mod.rs  style.rs
src/gui/views/: about.rs  list.rs  settings.rs
src/gui/widgets/: mod.rs  modal.rs  navigation_menu.rs  package_rows.rs
