[package]
name = "Appocalypse_gui"
description = "A cross-platform GUI debloater for android devices"
version = "0.6.0"
authors = ["Syed Insaf"]
license = "GPL-3.0"
repository = "https://github.com/syedinsaf/Appocalypse"
readme = "README.md"
keywords = ["debloater", "android", "adb", "privacy", "bloatware"]
categories = ["gui"]
edition = "2024"

[features]
default = ["wgpu", "self-update"]
wgpu = []                         # Iced/wgpu is default
glow = ["iced/glow"]              # OpenGL support
self-update = ["flate2", "tar"]
no-self-update = []

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git" }
iced_native = { git = "https://github.com/iced-rs/iced.git" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.145"
static_init = "1.0.4"
fern = { version = "0.7.1", features = ["colored"] }
chrono = { version = "0.4.42", default-features = false, features = ["std", "clock"] }
log = "0.4.28"
regex = "1.11.3"
toml = "0.9.7"
dirs = "6.0.0"
ureq = { version = "3.1.2", features = ["json"] }
retry = { version = "2.1.0" }

[target.'cfg(not(target_os = "windows"))'.dependencies]
flate2 = { version = "1.1.4", optional = true }
tar = { version = "0.4.44", optional = true }

[profile.release]
codegen-units = 1
debug = 0
lto = "fat"
strip = true
opt-level = 3
panic = "abort"
incremental = false